2019-07-19  Simon Pfreundschuh  <simon.pfreundschuh@chalmers.se>

	* arts-2-3-1259

	* doc/uguide/developer.txt:

	Preparations for migration to git:
	- Replaced SVN part with description of the git-based workflow
	- Added short description of the new formatting and naming
	  conventions

2019-07-19  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-1258

	* CMakeLists.txt:

	"Deprecated copy warning" from GCC9 is fixed now.

	* src/array.h, src/matpack*.h, src/complex.h, src/methods.h,
	src/mystring.h:

	Add default copy and move constructors.
	Replace empty destructor implementations with default version.

	* src/absorption.h:

	Replace unneeded constructor and operator implementation with default.

	* .travis.yml: Switch to GCC 9 and LLVM 8. Keep GCC 4.9 as low anchor.

2019-07-17  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-1257

	* controlfiles/artscomponents/doit/yREFERENCE_DOITaccelerated.xml:

	Update reference file to account for slight numerical changes.

2019-07-16  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-1256

	* CMakeLists.txt:

	Add compiler flag -Wno-deprecated-copy for now to get on top of
	GCC 9's warning frenzy. Should be fixed eventually though.

	* src/m_linemixing.cc (abs_xsec_per_speciesAddLineMixedBands):

	Add macro to suppress warnings of unused parameters when compiling
	without Fortran support.

2019-07-16  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-1255

	* 3rdparty/invlib/src/invlib/convergence_criteria.h,
	src/linemixing.cc

	Comment out names of unused parameters to silence compiler warnings.

	* src/m_cloudradar.cc, src/m_optproperties.cc, src/rt4.cc:

	Don't implicitly convert floats to bool. Replaced by proper comparison
	for readability and to silence compiler warning.

	* src/m_optproperties.cc (pha_mat_sptFromMonoData):

	Initialize T_gp to satisfy clang analyzer.

	* src/covariance_matrix.cc (CovarianceMatrix::generate_blocks),
	3rdparty/invlib/src/invlib/interfaces/arts_wrapper.h