@@ -1,3 +1,11 @@
+2019-07-19 Simon Pfreundschuh <simon.pfreundschuh@chalmers.se>
+
+	* arts-2-3-1260
+
+	* src/m_linemixing.cc:
+	Replaced arrays allocated using new[] with Vector and ArrayOfIndex to
+	avoid memory leak when an exception is thrown.
+
 2019-07-19  Simon Pfreundschuh  <simon.pfreundschuh@chalmers.se>
 
 	* arts-2-3-1259
@@ -37,6 +45,7 @@
 
 	Update reference file to account for slight numerical changes.
 
+>>>>>>> .r11297
 2019-07-16  Oliver Lemke  <olemke@core-dump.info>
 
 	* arts-2-3-1256
